log
Wed, Mar 19, 2025  8:43:54 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:00:24 AM: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
       if(elemento=NULL) return EXIT_FAILURE;
       ^~
exercises.c:50:32: error: return makes pointer from integer without a cast [-Werror=int-conversion]
       if(elemento=NULL) return EXIT_FAILURE;
                                ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4f7a293
Wed, Mar 19, 2025  9:01:09 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:33: error: return makes pointer from integer without a cast [-Werror=int-conversion]
       if(elemento==NULL) return EXIT_FAILURE;
                                 ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
03c3a06
Wed, Mar 19, 2025  9:05:16 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:33: error: return makes pointer from integer without a cast [-Werror=int-conversion]
       if(elemento==NULL) return EXIT_FAILURE;
                                 ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ee59de7
Wed, Mar 19, 2025  9:11:08 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:33: error: return makes pointer from integer without a cast [-Werror=int-conversion]
       if(elemento==NULL) return EXIT_FAILURE;
                                 ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1523aa3
Wed, Mar 19, 2025  9:13:53 AM: 
 exercises.c | 11 ++---------
 1 file changed, 2 insertions(+), 9 deletions(-)
 tests:  1|4
total_score: 10/70
f8d9a24
Wed, Mar 19, 2025  9:16:56 AM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|3
total_score: 20/70
c7b8431
Wed, Mar 19, 2025  9:20:39 AM: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
a78940a
Wed, Mar 19, 2025  9:22:02 AM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:22: error: dereferencing 'void *' pointer [-Werror]
       suma += ((int)(*num));
                      ^~~~
exercises.c:67:7: error: invalid use of void expression
       suma += ((int)(*num));
       ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3358718
Wed, Mar 19, 2025  9:23:15 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
2d504a5
Wed Mar 19 21:51:44 -03 2025: 
 tests:  2|3
total_score: 20/70
4606dc5
Wed Mar 19 22:11:34 -03 2025: 
 exercises.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  2|3
total_score: 20/70
96bd5bf
Wed Mar 19 22:26:31 -03 2025: 
 exercises.c | 37 +++++++++++++++++++++++++++----------
 1 file changed, 27 insertions(+), 10 deletions(-)
 tests:  3|2
total_score: 40/70
0cc53a2
Wed Mar 19 22:40:11 -03 2025: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  4|1
total_score: 50/70
f6f246f
Wed Mar 19 22:48:00 -03 2025: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
./exercises.c:141:27: error: incompatible pointer types passing 'char *' to parameter of type 'List *' (aka 'struct List *') [-Werror,-Wincompatible-pointer-types]
   char *elemento = first(cadena);
                          ^~~~~~
./arraylist.h:10:19: note: passing argument to parameter 'L' here
void* first(List *L);
                  ^
In file included from test.c:5:
./exercises.c:148:23: error: incompatible pointer types passing 'char *' to parameter of type 'List *' (aka 'struct List *') [-Werror,-Wincompatible-pointer-types]
      elemento = next(cadena);
                      ^~~~~~
./arraylist.h:14:18: note: passing argument to parameter 'L' here
void* next(List *L);
                 ^
2 errors generated.
Compilation failed
36f31e4
Wed Mar 19 22:51:26 -03 2025: 
 exercises.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:5:
./exercises.c:141:25: error: multi-character character constant [-Werror,-Wmultichar]
   for (int k = 0; k != '/0'; k++)
                        ^
1 error generated.
Compilation failed
b3aa1f5
Wed Mar 19 22:52:14 -03 2025: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
b9e022d
Wed Mar 19 22:52:45 -03 2025: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
ffa8631
Wed Mar 19 22:53:13 -03 2025: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
d43e6d1
Wed Mar 19 22:53:53 -03 2025: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
3259863
Wed Mar 19 22:54:46 -03 2025: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
fe626c4
Wed Mar 19 23:08:45 -03 2025: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
c4c7b61
Wed Mar 19 23:21:43 -03 2025: 
 exercises.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  4|1
total_score: 50/70
71c9f13
Wed Mar 19 23:22:36 -03 2025: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
7a9e0d6
Fri Mar 21 00:02:38 -03 2025: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
e998d5a
Sat Mar 22 12:30:40 -03 2025: 
 exercises.c | 55 ++++++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 46 insertions(+), 9 deletions(-)
 tests:  9|0
total_score: 70/70
3e8a357
